--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "vue": "^2.6.11"
+        "vue": "^2.6.11",
+        "vue-router": "^3.3.1",
+        "vue2-timeago": "^1.2.7"
     }
 }
